--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,4 @@ spring.datasource.username=root
 spring.datasource.password=
 spring.jpa.show-sql=true
 logging.level.org.hibernate.type=trace
+server.port=9090
