--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/bank_app
-spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.url=jdbc:mysql://bankserverformaseappsql.mysql.database.azure.com:3306/bank_app?useSSL=true&requireSSL=false
+spring.datasource.username=bankadmin@bankserverformaseappsql
+spring.datasource.password=3edcVFR$5tgb
 spring.jpa.show-sql=true
 logging.level.org.hibernate.type=trace
 server.port=9090
