--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://bankserverformaseappsql.mysql.database.azure.com:3306/bank_app?useSSL=true&requireSSL=false
-spring.datasource.username=bankadmin@bankserverformaseappsql
+spring.datasource.url=jdbc:mysql://bankappsql.mysql.database.azure.com:3306/bank_app?useSSL=true&requireSSL=false
+spring.datasource.username=razone@bankappsql
 spring.datasource.password=3edcVFR$5tgb
 spring.jpa.show-sql=true
 logging.level.org.hibernate.type=trace
